# research_cython

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
core/: __init__.py  _numpy_array.pxd  run.py
core/headers/: argsort.pxd  extremes.pxd  extremes.pyi
core/src/: argsort.pyx  extremes.pyx
trading_math/: __init__.pxd  __init__.py  _cython_typing.pxd  _numpy_array.pyx  _python_typing.py  run.py
trading_math/headers/: argsort.pxd  extremes.pxd
trading_math/src/: argsort.pyi  argsort.pyx  extremes.pyx
