[tool.poetry]
name = "trading-math"
version = "0.1.0"
description = ""
authors = ["turilin <turilin@primatlab.com>"]
license = "BSD 3-Clause License"
readme = "README.md"
package = [
    { exclude = "trading_math/**/*.cpp" },
    { include = "trading_math/**/*.py" },
    { include = "trading_math/**/*.pyi" },
    { include = "README.md" },
    { include = "LICENSE" },

]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.21.0"
cython = "^3.0.10"
setuptools = "^69.5.1"

[build-system]
requires = ["setuptools", "wheel", "numpy>=1.21.0", "cython>=0.29.23"]
build-backend = "setuptools.build_meta"

[tool.poetry.build]
generate-setup-file = true
script = "setup.py"